--- a/app/src/main/res/layout/fragment_humidity.xml
+++ b/app/src/main/res/layout/fragment_humidity.xml
@@ -6,27 +6,123 @@
     <com.craftapps.remotehorticulture.app.widgets.VerticalSeekBar
         android:layout_width="wrap_content"
         android:layout_height="200dp"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="25dp"
+        android:layout_centerHorizontal="false"
         android:max="100"
         android:id="@+id/verticalSeekBar"
-        android:progress="50" />
+        android:progress="50"
+        android:thumb="@android:color/transparent"
+        android:layout_alignBottom="@+id/textView_latestHumid" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="200dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Adjust Humidity"
-        android:id="@+id/textView"
+        android:text="0.00 %"
+        android:id="@+id/textView_latestHumid"
+        android:gravity="center"
+        android:textSize="55dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/verticalSeekBar"
+        android:paddingTop="30dp"
+        android:typeface="serif" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Date"
+        android:id="@+id/textView_latestHumidDate"
+        android:gravity="center"
+        android:typeface="serif"
+        android:layout_above="@+id/textView_minHumidLabel"
+        android:layout_alignLeft="@+id/textView_latestHumid"
+        android:layout_alignStart="@+id/textView_latestHumid"
+        android:layout_alignRight="@+id/textView_latestHumid"
+        android:layout_alignEnd="@+id/textView_latestHumid" />
+
+    <com.androidplot.xy.XYPlot
+        android:id="@+id/humidityPlot"
+        android:layout_width="fill_parent"
+        android:layout_height="250dp"
+        androidPlot.title="Humidity"
+        androidPlot.domainLabel="Domain"
+        androidPlot.rangeLabel="Range"
+        androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
+        androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
+        androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
+        androidPlot.graphWidget.marginTop="20dp"
+        androidPlot.graphWidget.marginLeft="15dp"
+        androidPlot.graphWidget.marginBottom="25dp"
+        androidPlot.graphWidget.marginRight="10dp"
+        androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
+        androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
+        androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
+        androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"
+        androidPlot.legendWidget.textPaint.textSize="@dimen/legend_text_font_size"
+        androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
+        androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
+        androidPlot.legendWidget.heightMetric.value="25dp"
+        androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
+        androidPlot.graphWidget.gridLinePaint.color="#000000"
+        android:layout_below="@+id/textView_minHumid"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/verticalSeekBar"
-        android:layout_centerHorizontal="true" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Min Humidity:"
+        android:id="@+id/textView_minHumidLabel"
+        android:padding="16dp"
+        android:typeface="serif"
+        android:layout_below="@+id/textView_latestHumid"
+        android:layout_alignLeft="@+id/textView_latestHumidDate"
+        android:layout_alignStart="@+id/textView_latestHumidDate" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Max Humidity:"
+        android:id="@+id/textView_maxHumidLabel"
+        android:padding="16dp"
+        android:typeface="serif"
+        android:layout_alignTop="@+id/textView_minHumidLabel"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="-0.00 %"
+        android:id="@+id/textView_minHumid"
+        android:typeface="serif"
+        android:layout_alignTop="@+id/textView_maxHumid"
+        android:layout_toRightOf="@+id/verticalSeekBar"
+        android:layout_alignRight="@+id/textView_minHumidLabel"
+        android:layout_alignEnd="@+id/textView_minHumidLabel"
+        android:gravity="center_horizontal|top"
+        android:paddingBottom="50dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="0.00 %"
+        android:id="@+id/textView_maxHumid"
+        android:gravity="center_horizontal|top"
+        android:typeface="serif"
+        android:layout_below="@+id/textView_maxHumidLabel"
+        android:layout_alignRight="@+id/textView_latestDate"
+        android:layout_alignEnd="@+id/textView_latestDate"
+        android:layout_alignLeft="@+id/textView_maxHumidLabel"
+        android:layout_alignStart="@+id/textView_maxHumidLabel"
+        android:paddingBottom="50dp" />
+
+
 </RelativeLayout>
