--- a/app/src/main/res/layout/fragment_water.xml
+++ b/app/src/main/res/layout/fragment_water.xml
@@ -3,10 +3,75 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <com.craftapps.remotehorticulture.app.widgets.VerticalSeekBar
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_marginLeft="25dp"
+        android:layout_centerHorizontal="false"
+        android:max="100"
+        android:id="@+id/verticalSeekBar"
+        android:progress="50"
+        android:thumb="@android:color/transparent"
+        android:layout_alignBottom="@+id/textView_latestWater"
+        android:indeterminate="false" />
+
+    <TextView
+        android:layout_width="250dp"
+        android:layout_height="200dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="0.00 %"
+        android:id="@+id/textView_latestWater"
+        android:gravity="center"
+        android:textSize="55dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/verticalSeekBar"
+        android:paddingTop="30dp"
+        android:typeface="serif" />
+
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Water Level Fragment"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="50dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Date"
+        android:id="@+id/textView_latestWaterDate"
+        android:gravity="center"
+        android:typeface="serif"
+        android:layout_alignBottom="@+id/textView_latestWater"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignLeft="@+id/textView_latestWater"
+        android:layout_alignStart="@+id/textView_latestWater" />
+
+    <com.androidplot.xy.XYPlot
+        android:id="@+id/waterPlot"
+        android:layout_width="fill_parent"
+        android:layout_height="250dp"
+        androidPlot.title="Water Level"
+        androidPlot.domainLabel="Domain"
+        androidPlot.rangeLabel="Range"
+        androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
+        androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
+        androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
+        androidPlot.graphWidget.marginTop="20dp"
+        androidPlot.graphWidget.marginLeft="15dp"
+        androidPlot.graphWidget.marginBottom="25dp"
+        androidPlot.graphWidget.marginRight="10dp"
+        androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
+        androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
+        androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
+        androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"
+        androidPlot.legendWidget.textPaint.textSize="@dimen/legend_text_font_size"
+        androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
+        androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
+        androidPlot.legendWidget.heightMetric.value="25dp"
+        androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
+        androidPlot.graphWidget.gridLinePaint.color="#000000"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView_latestWater"
+        android:paddingTop="30dp" />
+
+
 </RelativeLayout>
