--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -2,39 +2,94 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/">
 
-    <Button
-        android:id="@+id/buttonOverride"
+    <com.craftapps.remotehorticulture.app.widgets.VerticalSeekBar
+        android:layout_width="25dp"
+        android:layout_height="200dp"
+        android:max="120"
+        android:id="@+id/tempSeekBar"
+        android:progress="50"
+        android:thumb="@android:color/transparent"
+        android:indeterminate="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <com.craftapps.remotehorticulture.app.widgets.VerticalSeekBar
+        android:layout_width="25dp"
+        android:layout_height="200dp"
+        android:max="120"
+        android:id="@+id/humidSeekBar"
+        android:progress="50"
+        android:thumb="@android:color/transparent"
+        android:indeterminate="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="100 F"
+        android:id="@+id/textView_overviewTemp"
+        android:gravity="bottom|left"
+        android:textSize="45dp"
+        android:typeface="serif"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/tempSeekBar"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
+        android:paddingRight="16dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="100 %"
+        android:id="@+id/textView_overviewHumid"
+        android:gravity="bottom|right"
+        android:textSize="45dp"
+        android:typeface="serif"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/humidSeekBar"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
+        android:paddingRight="16dp"
+        android:layout_alignBottom="@+id/textView_overviewTemp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Date"
+        android:id="@+id/textView_latestTempDate"
+        android:gravity="center"
+        android:typeface="serif"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <ToggleButton
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/custom_switch"
+        android:text=""
+        android:id="@+id/toggleButtonLighting"
+        android:textOn=""
+        android:textOff=""
+        android:layout_below="@+id/textView_overviewTemp"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/mySimpleXYPlot"
-        android:layout_centerHorizontal="true"
-        android:text="Load Values"/>
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Grow Cycle:"
+        android:id="@+id/textView3"
+        android:layout_below="@+id/toggleButtonLighting"
+        android:layout_alignParentStart="true"
+        android:padding="16dp" />
 
-    <com.androidplot.xy.XYPlot
-        android:id="@+id/mySimpleXYPlot"
-        android:layout_width="fill_parent"
-        android:layout_height="275dp"
-        androidPlot.title="Overview"
-        androidPlot.domainLabel="Domain"
-        androidPlot.rangeLabel="Range"
-        androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
-        androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
-        androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
-        androidPlot.graphWidget.marginTop="20dp"
-        androidPlot.graphWidget.marginLeft="15dp"
-        androidPlot.graphWidget.marginBottom="25dp"
-        androidPlot.graphWidget.marginRight="10dp"
-        androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
-        androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
-        androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
-        androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"
-        androidPlot.legendWidget.textPaint.textSize="@dimen/legend_text_font_size"
-        androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
-        androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
-        androidPlot.legendWidget.heightMetric.value="25dp"
-        androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
-        androidPlot.graphWidget.gridLinePaint.color="#000000"/>
 
 </RelativeLayout>
