--- a/app/src/main/res/layout/fragment_temperature.xml
+++ b/app/src/main/res/layout/fragment_temperature.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:layout_width="250dp"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="-0.00 F"
         android:id="@+id/textView_latestTemp"
@@ -44,7 +44,7 @@
         android:layout_alignRight="@+id/textView_latestTemp"
         android:layout_alignEnd="@+id/textView_latestTemp" />
 
-    <com.androidplot.xy.XYPlot
+    <!--<com.androidplot.xy.XYPlot
         android:id="@+id/temperaturePlot"
         android:layout_width="fill_parent"
         android:layout_height="250dp"
@@ -70,7 +70,7 @@
         androidPlot.graphWidget.gridLinePaint.color="#000000"
         android:layout_below="@+id/textView_minTemp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true" />-->
 
     <TextView
         android:layout_width="wrap_content"
@@ -108,7 +108,7 @@
         android:layout_alignRight="@+id/textView_minTempLabel"
         android:layout_alignEnd="@+id/textView_minTempLabel"
         android:gravity="center_horizontal|top"
-        android:paddingBottom="50dp" />
+        android:paddingBottom="25dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -123,7 +123,15 @@
         android:layout_alignEnd="@+id/textView_latestTempDate"
         android:layout_alignLeft="@+id/textView_maxTempLabel"
         android:layout_alignStart="@+id/textView_maxTempLabel"
-        android:paddingBottom="50dp" />
+        android:paddingBottom="25dp" />
+
+    <WebView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/webView"
+        android:layout_below="@+id/textView_minTemp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
