--- a/app/src/main/res/layout/dialog_lighting.xml
+++ b/app/src/main/res/layout/dialog_lighting.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="WATERING TIME"
-        android:id="@+id/textView"
+        android:id="@+id/textViewLightHours"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingLeft="16dp"
@@ -34,7 +34,7 @@
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/textViewLightHours"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -56,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="WATERING FREQUENCY"
-        android:id="@+id/textView5"
+        android:id="@+id/textViewDarkHours"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingLeft="16dp"
@@ -236,7 +236,7 @@
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
+        android:layout_below="@+id/textViewDarkHours"
         android:layout_centerHorizontal="true"
         android:id="@+id/linearLayout3">
 
@@ -248,7 +248,7 @@
             android:id="@+id/textView6"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
-            android:layout_below="@+id/textView5" />
+            android:layout_below="@+id/textViewDarkHours" />
 
         <CheckBox
             android:layout_width="wrap_content"
