--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,14 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="WhiteBoldText" parent="@android:style/Widget">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="BlackNormalText" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">#000</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
 </resources>
