--- a/app/src/main/res/layout/dialog_lighting.xml
+++ b/app/src/main/res/layout/dialog_lighting.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Water Feeding"
+        android:text="Light Schedule"
         android:id="@+id/textView4"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
@@ -15,249 +17,111 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="WATERING TIME"
+        android:text="LIGHTING TIME:"
         android:id="@+id/textViewLightHours"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingLeft="16dp"
+        android:layout_below="@+id/multiToggleLighting"
+        android:layout_alignParentStart="true"
+        android:paddingBottom="10dp" />
+
+    <com.craftapps.remotehorticulture.app.widgets.MultiStateToggleButton
+        android:id="@+id/multiToggleLighting"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:entries="@array/overrideLighting"
         android:layout_below="@+id/textView4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Start at..."
-        android:id="@+id/textView2"
-        android:paddingLeft="30dp"
-        android:paddingTop="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="16dp"
-        android:layout_below="@+id/textViewLightHours"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="End at..."
-        android:id="@+id/textView3"
-        android:paddingLeft="30dp"
-        android:paddingTop="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="16dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:gravity="center" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="WATERING FREQUENCY"
-        android:id="@+id/textViewDarkHours"
-        android:paddingTop="16dp"
+        android:text="10 HOURS OF LIGHT"
+        android:id="@+id/textViewLightingDuration"
         android:paddingRight="16dp"
         android:paddingLeft="16dp"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentLeft="true"
+        android:paddingBottom="16dp"
+        android:gravity="center_horizontal"
+        android:layout_below="@+id/rangeBarLighting"
+        android:layout_alignParentStart="true" />
+
+    <com.craftapps.remotehorticulture.app.widgets.RangeBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/rangeBarLighting"
+        app:tickCount="1440"
+        app:tickHeight="1dp"
+        android:layout_below="@+id/textViewLightHours"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text=": OFF"
+        android:id="@+id/textView2"
+        android:layout_below="@+id/textViewLightingDuration"
+        android:layout_alignParentEnd="true"
+        android:gravity="left"
+        android:textColor="#ff313131"
+        android:paddingTop="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="ON :"
+        android:id="@+id/textView"
+        android:layout_below="@+id/textViewLightingDuration"
         android:layout_alignParentStart="true"
+        android:gravity="right"
+        android:textColor="#ff313131"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
         android:paddingBottom="16dp" />
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout"
-        android:layout_below="@+id/linearLayout3"
-        android:layout_centerHorizontal="true">
+        android:weightSum="2"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textViewLightingDuration">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="S"
-            android:id="@+id/textView_Sunday"
-            android:layout_below="@+id/textView6"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:gravity="center"
-            android:padding="10dp" />
+            android:text="9 AM"
+            android:id="@+id/textViewLightingOn"
+            android:padding="16dp"
+            android:layout_below="@+id/textViewLightingDuration"
+            android:layout_toEndOf="@+id/textView"
+            android:gravity="right"
+            android:textSize="20dp"
+            android:textStyle="bold|italic"
+            android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="M"
-            android:id="@+id/textView_Monday"
-            android:gravity="center"
-            android:padding="10dp"
-            android:layout_alignTop="@+id/textView_Sunday"
-            android:layout_toRightOf="@+id/textView_Sunday" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="T"
-            android:id="@+id/textView_Tuesday"
-            android:gravity="center"
-            android:padding="10dp"
-            android:layout_alignTop="@+id/textView_Monday"
-            android:layout_toRightOf="@+id/textView_Monday" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="W"
-            android:id="@+id/textView_Wednesday"
-            android:gravity="center"
-            android:padding="10dp"
-            android:layout_alignTop="@+id/textView_Tuesday"
-            android:layout_toRightOf="@+id/textView_Tuesday" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="T"
-            android:id="@+id/textView_Thursday"
-            android:gravity="center"
-            android:padding="10dp"
-            android:layout_alignTop="@+id/textView_Wednesday"
-            android:layout_toRightOf="@+id/textView_Wednesday" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="F"
-            android:id="@+id/textView_Friday"
-            android:gravity="center"
-            android:padding="10dp"
-            android:layout_alignTop="@+id/textView_Thursday"
-            android:layout_toRightOf="@+id/textView_Thursday" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="S"
-            android:id="@+id/textView7"
-            android:gravity="center"
-            android:padding="10dp"
-            android:layout_alignTop="@+id/textView_Friday"
-            android:layout_toRightOf="@+id/textView_Friday" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout2">
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkBox_Sunday"
-            android:checked="false"
-            android:padding="1dp" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkBox_Monday"
-            android:checked="false"
-            android:padding="1dp" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkBox_Tuesday"
-            android:checked="false"
-            android:padding="1dp" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkBox_Wednesday"
-            android:checked="false"
-            android:padding="1dp" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkBox_Thursday"
-            android:checked="false"
-            android:padding="1dp" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkBox_Friday"
-            android:checked="false"
-            android:padding="1dp" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkBox_Saturday"
-            android:checked="false"
-            android:padding="1dp" />
-    </LinearLayout>
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Open Time Picker Dialog"
-        android:id="@+id/buttonStartTime"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_toRightOf="@+id/textView2"
-        android:layout_alignRight="@+id/linearLayout2"
-        android:layout_alignEnd="@+id/linearLayout2" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Open Time Picker Dialog"
-        android:id="@+id/buttonEndTime"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_toRightOf="@+id/textView2"
-        android:layout_alignRight="@+id/buttonStartTime"
-        android:layout_alignEnd="@+id/buttonStartTime" />
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewDarkHours"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout3">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Repeat?"
-            android:id="@+id/textView6"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:layout_below="@+id/textViewDarkHours" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:id="@+id/checkBox_Repeat"
-            android:layout_gravity="center_horizontal"
-            android:checked="false"
-            android:layout_alignTop="@+id/textView6"
-            android:layout_toRightOf="@+id/textView6" />
+            android:text="7 PM"
+            android:id="@+id/textViewLightingOff"
+            android:padding="16dp"
+            android:layout_toEndOf="@+id/textViewLightingOn"
+            android:layout_alignTop="@+id/textView2"
+            android:layout_toStartOf="@+id/textView2"
+            android:layout_alignBottom="@+id/textView2"
+            android:gravity="left"
+            android:textStyle="bold|italic"
+            android:textSize="20dp"
+            android:layout_weight="1" />
     </LinearLayout>
 
 </RelativeLayout>
