--- a/app/src/main/res/layout/dialog_water.xml
+++ b/app/src/main/res/layout/dialog_water.xml
@@ -20,7 +20,7 @@
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingLeft="16dp"
-        android:layout_below="@+id/multiToggleWatering"
+        android:layout_below="@+id/multiToggleLighting"
         android:layout_alignParentStart="true"
         android:paddingBottom="10dp" />
 
@@ -33,11 +33,11 @@
         android:paddingRight="16dp"
         android:paddingLeft="16dp"
         android:paddingBottom="16dp"
-        android:layout_below="@+id/textViewDurationTime"
+        android:layout_below="@+id/textViewLightingDuration"
         android:layout_alignParentStart="true" />
 
     <com.craftapps.remotehorticulture.app.widgets.MultiStateToggleButton
-        android:id="@+id/multiToggleWatering"
+        android:id="@+id/multiToggleLighting"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:entries="@array/overrideWatering"
@@ -105,7 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="EVERY X HOURS"
-        android:id="@+id/textViewDurationTime"
+        android:id="@+id/textViewLightingDuration"
         android:paddingRight="16dp"
         android:paddingLeft="16dp"
         android:paddingBottom="16dp"
