--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -12,7 +12,7 @@
         android:progress="50"
         android:thumb="@android:color/transparent"
         android:indeterminate="false"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/textView"
         android:layout_alignParentStart="true" />
 
     <com.craftapps.remotehorticulture.app.widgets.VerticalSeekBar
@@ -23,61 +23,62 @@
         android:progress="50"
         android:thumb="@android:color/transparent"
         android:indeterminate="false"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/textView"
         android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="200dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="100 F"
         android:id="@+id/textViewOverviewTemp"
-        android:gravity="bottom|left"
+        android:gravity="center_vertical|left"
         android:textSize="45dp"
         android:typeface="serif"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/seekBarTemperature"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"
-        android:paddingRight="16dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="100 %"
-        android:id="@+id/textViewOverviewHumid"
-        android:gravity="bottom|right"
-        android:textSize="45dp"
-        android:typeface="serif"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/seekBarHumidity"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
-        android:layout_alignBottom="@+id/textViewOverviewTemp" />
+        android:layout_toEndOf="@+id/seekBarTemperature"
+        android:layout_alignTop="@+id/seekBarTemperature" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="100 %"
+        android:id="@+id/textViewOverviewHumid"
+        android:gravity="center_vertical|right"
+        android:textSize="45dp"
+        android:typeface="serif"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
+        android:paddingRight="16dp"
+        android:layout_toStartOf="@+id/seekBarHumidity"
+        android:layout_alignTop="@+id/seekBarHumidity"
+        android:layout_alignEnd="@+id/textViewWateringDuration" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Date"
+        android:text="10:52 PM - Mon July 21"
         android:id="@+id/textViewTemperatureDate"
         android:gravity="center"
         android:typeface="serif"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/seekBarTemperature"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
     <ToggleButton
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:background="@drawable/custom_switch"
         android:text=""
         android:id="@+id/toggleButtonLighting"
         android:textOn=""
         android:textOff=""
-        android:layout_below="@+id/textViewOverviewTemp"
+        android:paddingTop="50dp"
+        android:layout_alignBottom="@+id/textViewOverviewTemp"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -85,7 +86,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Grow Light Cycle:"
-        android:id="@+id/textView3"
+        android:id="@+id/textViewLightingOn"
         android:layout_below="@+id/toggleButtonLighting"
         android:layout_alignParentStart="true"
         android:textStyle="bold"
@@ -101,7 +102,7 @@
         android:id="@+id/textView4"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/textViewLightingOn"
         android:layout_alignParentStart="true"
         android:paddingBottom="16dp"
         android:paddingTop="16dp" />
@@ -115,8 +116,8 @@
         android:paddingBottom="16dp"
         android:typeface="serif"
         android:textSize="20dp"
-        android:paddingTop="12dp"
-        android:layout_below="@+id/textView3"
+        android:paddingTop="13dp"
+        android:layout_below="@+id/textViewLightingOn"
         android:layout_toRightOf="@+id/textView7" />
 
     <TextView
@@ -129,7 +130,7 @@
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/textViewLightingOn"
         android:layout_toLeftOf="@+id/textViewWateringDuration" />
 
     <TextView
@@ -141,7 +142,7 @@
         android:paddingBottom="16dp"
         android:typeface="serif"
         android:textSize="20dp"
-        android:paddingTop="12dp"
+        android:paddingTop="13dp"
         android:layout_alignTop="@+id/textView2"
         android:layout_toRightOf="@+id/textView2" />
 
@@ -150,7 +151,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Watering Cycle:"
-        android:id="@+id/textView6"
+        android:id="@+id/textViewLightingOff"
         android:textStyle="bold"
         android:layout_below="@+id/textView4"
         android:layout_alignParentStart="true"
@@ -167,7 +168,7 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
-        android:layout_below="@+id/textView6"
+        android:layout_below="@+id/textViewLightingOff"
         android:layout_alignParentStart="true"
         android:paddingTop="16dp" />
 
@@ -180,7 +181,7 @@
         android:paddingBottom="16dp"
         android:textSize="20dp"
         android:typeface="serif"
-        android:paddingTop="12dp"
+        android:paddingTop="13dp"
         android:layout_alignTop="@+id/textView7"
         android:layout_toRightOf="@+id/textView7" />
 
@@ -188,13 +189,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Durat:ion"
+        android:text="Duration"
         android:id="@+id/textView9"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
-        android:layout_below="@+id/textView6"
+        android:layout_below="@+id/textViewLightingOff"
         android:layout_toRightOf="@+id/textViewOverviewTemp" />
 
     <TextView
@@ -206,9 +207,22 @@
         android:paddingBottom="16dp"
         android:textSize="20dp"
         android:typeface="serif"
-        android:paddingTop="12dp"
+        android:paddingTop="13dp"
         android:layout_alignTop="@+id/textView9"
         android:layout_toRightOf="@+id/textView9" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Control Hub Overview"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center"
+        android:padding="5dp"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
